tests/invalid/Return_Invalid_2.whiley
import * from whiley.lang.*

function f() -> void:
    return true
